#pragma once

#include <cstddef>

struct BarcodeOptions {
    std::size_t ModuleSize = 10;
    std::size_t Margin = 4;
};