#pragma once

enum class BarcodeType {
    QR,
    DataMatrix,
    Aztec
};