#pragma once
#include "encoders/iencoder.h"
#include "common/barcode_matrix.h"
// ??????? ??? ????????? ?????????? ??????? Aztec
class AztecEncoder : public IEncoder {
public:
	BarcodeMatrix Encode(const std::string& data, const BarcodeOptions& options) const override;
};