@startuml

title SVG Barcode Generator for 1C - Core Architecture

skinparam classAttributeIconSize 0

class ComponentInterface {
  -m_service: BarcodeService
  +Init(pConnection: void*): bool
  +Done(): void
  +RegisterExtensionAs(wsExtName: WCHAR_T**): bool
  +GetNMethods(): long
  +FindMethod(wsMethodName: WCHAR_T*): long
  +GetMethodName(methodNum: long, alias: long): WCHAR_T*
  +GetNParams(methodNum: long): long
  +HasRetVal(methodNum: long): bool
  +CallAsFunc(methodNum: long, retValue: tVariant*, params: tVariant*, size: long): bool
  -extractString(param: tVariant*): string
  -extractInt(param: tVariant*, out: int&): bool
  -returnWString(retValue: tVariant*, svg: string): bool
}

class BarcodeService {
  -renderer_: SvgRenderer
  +Generate(data: string, type: BarcodeType, options: BarcodeOptions): string
}

class EncoderFactory {
  +Create(type: BarcodeType): unique_ptr<IEncoder>
}

interface IEncoder {
  +Encode(data: string, options: BarcodeOptions): BarcodeMatrix
}

class QREncoder {
  +Encode(data: string, options: BarcodeOptions): BarcodeMatrix
}

class DataMatrixEncoder {
  +Encode(data: string, options: BarcodeOptions): BarcodeMatrix
}

class AztecEncoder {
  +Encode(data: string, options: BarcodeOptions): BarcodeMatrix
}

class SvgRenderer {
  +Render(matrix: BarcodeMatrix, options: BarcodeOptions): string
}

class BarcodeMatrix {
  -width_: size_t
  -height_: size_t
  -data_: vector<bool>
  +GetWidth(): size_t
  +GetHeight(): size_t
  +IsEmpty(): bool
  +Get(x: size_t, y: size_t): bool
  +Set(x: size_t, y: size_t, value: bool): void
}

class BarcodeOptions {
  +ModuleSize: size_t
  +Margin: size_t
}

enum BarcodeType {
  QR
  DataMatrix
  Aztec
}

ComponentInterface --> BarcodeService : uses
BarcodeService --> EncoderFactory : creates encoder
BarcodeService --> SvgRenderer : renders matrix
EncoderFactory --> IEncoder : returns

IEncoder <|.. QREncoder
IEncoder <|.. DataMatrixEncoder
IEncoder <|.. AztecEncoder

QREncoder ..> BarcodeMatrix : returns
DataMatrixEncoder ..> BarcodeMatrix : returns
AztecEncoder ..> BarcodeMatrix : returns

QREncoder ..> BarcodeOptions : uses
DataMatrixEncoder ..> BarcodeOptions : uses
AztecEncoder ..> BarcodeOptions : uses

SvgRenderer ..> BarcodeMatrix : reads
SvgRenderer ..> BarcodeOptions : uses

BarcodeService ..> BarcodeType : selects type
EncoderFactory ..> BarcodeType : uses

ComponentInterface ..> BarcodeOptions : builds from 1C params
ComponentInterface ..> BarcodeType : selects by method

@enduml
